--- a/0327.ipynb
+++ b/0327.ipynb
@@ -514,6 +514,45 @@
     "    species_result = species[max_label]\n",
     "    return species_result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ID_1 = np.array([2.7, 2.4, 1.65, 0.67])\n",
+    "ID_2 = np.array([5.84, 5.48, 3, 2.16])\n",
+    "ID_3 = np.array([3.97, 4.01, 1.7, 0.67])\n",
+    "\n",
+    "result_1 = K_NN(ID_1, features, 5)\n",
+    "result_2 = K_NN(ID_2, features, 5)\n",
+    "result_3 = K_NN(ID_3, features, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "setosa setosa setosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result_1, result_2, result_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
